# code-audit

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  asm.txt  ast.txt  package-lock.json  package.json  settings.yaml  test.asm
app/: package-lock.json  package.json  tsconfig.json
app/css/: index.css
app/pages/: index.html
app/src/: main.ts
app/src/components/: icons.tsx  page.tsx  utils.ts
app/src/view/: index.ts  index.tsx
core/: CMakeLists.txt  Makefile
core/include/: channel.h  code_audit.h
core/include/code_audit/: analyser.h  analyser_base.h  auditor.h  c_lexer.h  compare_tree.h  diff.h  lexer.h  parser.h  source_code.h  string_analyser.h  syntax_analyser.h  token_analyser.h
core/src/: code_audit.cpp  source_code.cpp
core/src/analyser/: analyser_base.cpp  ast_diff_tree.cpp  string_based.cpp  syntax_analyser.cpp  token_analyser.cpp
core/src/audit/: auditor.cpp
core/src/grpc/: code-audit.proto
core/src/lexer/: c.l  lex.yy.c  lex.yy.cpp  lexer.cpp
core/src/parser/: ast_node.cpp  c.y  parser.cpp  parser.yy.cpp  test.txt
core/src/utils/: diff.cpp
distributed/: CMakeLists.txt  Makefile
distributed/include/: distribute.h  master.h  membuff.h  message.h  slave.h
distributed/src/lib/: master.cpp  membuf.cpp  message.cpp  slave.cpp
distributed/src/master/: test.cpp
distributed/src/node/: node.cpp
distributed/src/proto/: code-audit.proto
include/: analyser.h  lexer.h  parser.h  symbol.h
package/: binding.gyp  index.d.ts  index.js  index.ts  package-lock.json  package.json
package/src/: module.cpp  module.h  object_wrapper.cpp
src/analyser/: analyse_symbol.cpp  analyser.cpp  analyser_type.cpp  assembly.cpp
src/lexer/: c.l  lex.yy.cpp  lexer.cpp
src/parser/: ast_node.cpp  c.y  parser.cpp  parser.yy.cpp
src/test/: analyser_test.cpp  ast_test.cpp
test/: CMakeLists.txt  Makefile  package-lock.json  package.json  tsconfig.json
test/data/: audit-result.txt  audit.c  code.c  diff-result.txt  diffA.txt  diffB.c  diffB.txt  github.http  lex-result.txt  out  syntax-result.txt  syntax.c  syntaxA.c  syntaxB.c  test  test.asm
test/data/samples/: bubble-1.c  bubble-10.c  bubble-11.c  bubble-12.c  bubble-13.c  bubble-14.c  bubble-15.c  bubble-16.c  bubble-2.c  bubble-3.c  bubble-4.c  bubble-5.c  bubble-6.c  bubble-7.c  bubble-8.c  bubble-9.c  dijkstra-1.c  dijkstra-2.c  qsort-1.c  qsort-2.c  qsort-3.c  qsort-4.c  qsort-5.c  qsort-6.c  qsort-7.c  qsort-8.c  qsort-9.c
test/src/: ast_diff.cpp  audit.test.js  diff.test.js  fetch-code.js  lexe.test.js  lexer.test.js  lib.js  line-count.js  lineof.js  syntax.test.js  test.cpp  test.js  test.ts  test_audit.cpp  test_channel.cpp  test_diff.cpp  test_parser.cpp  tree_diff.cpp
test/src/lexer/: test_lexer.cpp
test/src/module/: audit.js  similarity.js
test/src/parser/: ast_test.cpp  syntax_test.cpp
